Ensure all CTA text is readable at smaller sreen widths.

--- a/client/components/videos-ui/modal-footer-bar.scss
+++ b/client/components/videos-ui/modal-footer-bar.scss
@@ -19,8 +19,6 @@
 		font-size: $font-body;
 		margin: 0;
 		display: none;
-		text-overflow: ellipsis;
-		white-space: nowrap;
 		overflow: hidden;
 	}
 }
